# res-dedup

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: args.rs  lib.rs  main.rs  scan.rs
src/scan/: mod.rs
src/scan/windows/: mod.rs
