[package]
name = "res-dedup-hardlink"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
compio = { version = "0.15.0", default-features = false, features = [
    "runtime",
    "macros",
] }
dashmap = "6.1.0"
futures-util = "0.3.31"
palc = "0.0.1"
rapidhash = "3.1.0"
windows = { version = "0.61.3", features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[features]
spawn_thread = []
