[package]
name = "res-dedup"
version = "0.1.0"
edition = "2024"

[dependencies]
compio = { version = "0.15.0", default-features = false, features = [
    "runtime",
    "macros",
] }
dashmap = "6.1.0"
futures-util = "0.3.31"
palc = "0.0.1"
parse-size = "1.1.0"
rapidhash = "4.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[features]
spawn_thread = []
